unchecked specs to run. added basic methods in songmodel. added event listener for end of song playing. attached enqueue to click handler with play

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,13 @@
 
         // put the view onto the screen
         $('body').append(appView.render());
+
+        // var mediaPlayer = document.getElementById("player");
+        // var songTest = function(){
+        //   if (mediaPlayer.played.end() === mediaPlayer.seekable.end()){
+        //     console.log('song over');
+        //   }
+        // };
       });
     </script>
   </body>
