fixed song queue view. added files to correct location in index. gnerated the views properly in the app. verified all functionality

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,10 @@
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
+    <script src="views/SongQueueView.js"></script>
     <script src="views/AppView.js"></script>
+
 
     <script>
       $(function(){
@@ -27,16 +30,12 @@
 
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
+        
 
         // put the view onto the screen
         $('body').append(appView.render());
 
-        // var mediaPlayer = document.getElementById("player");
-        // var songTest = function(){
-        //   if (mediaPlayer.played.end() === mediaPlayer.seekable.end()){
-        //     console.log('song over');
-        //   }
-        // };
+       
       });
     </script>
   </body>
