--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     <script src="views/SongQueueEntryView.js"></script>
     <script src="views/SongQueueView.js"></script>
     <script src="views/AppView.js"></script>
+    //<script src="data/styles.css"></script>
 
 
     <script>
